SpiderData/cnblogs/Clean/00912.txt
这个语法报错，意思是试图用python3.x来运行一个只用于python2.x版本的python代码。完整的错误代码是：

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "Added view permission for %s" % content_type.name)?

测试语句：

`

C:\Users\Administrator>python

Python 3.6.4 (v3.6.4:d48eceb, Dec 19 2017, 06:04:45) [MSC v.1900 32 bit (Intel)] on win32

Type "help", "copyright", "credits" or "license" for more information.

print "hello"

File "", line 1

print "hello"

^

SyntaxError: Missing parentheses in call to 'print'. Did you mean print("hello")?

`

